pkl/tests/invalid/duplicateUuid.pkl
amends "../../TaskSpans.pkl"

traceID = "11111111111111111111111111111111"

spans {
  new TaskSpan {
    goName = "First"
    name = "first"
    uuid = "11111111-1111-4111-8111-111111111111"
    traceID = "11111111111111111111111111111111"
    spanID = "1111111111111111"
  }
  new TaskSpan {
    goName = "Second"
    name = "second"
    uuid = "11111111-1111-4111-8111-111111111111"
    traceID = "11111111111111111111111111111111"
    spanID = "2222222222222222"
  }
}
